--- a/public/assets/css/estilos.css
+++ b/public/assets/css/estilos.css
@@ -470,7 +470,7 @@ h6 {
 #publi {
   width: 100%;
   height: 75vh;
-  background: url("../img/hero-bg.jpg") top left;
+  background: url("../img/header.jpg") top left;
   background-size: cover;
   position: relative;
 }
@@ -701,7 +701,7 @@ section {
 --------------------------------------------------------------*/
 .featured-services{
   padding: 80px 0;
-  background: url("../img/testimonials-bg.jpg") no-repeat;
+  background: url("../img/fondo.jpg") no-repeat;
   background-position: center center;
   background-size: cover;
   position: relative;
@@ -919,10 +919,12 @@ section {
 /*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
+
 .services .icon-box {
   text-align: center;
   border: 1px solid #e2eefd;
-  padding: 80px 20px;
+  padding: 25px 30px;
+  width: 15rem;
   transition: all ease-in-out 0.3s;
   background: #fff;
 }
@@ -949,7 +951,6 @@ section {
 
 .services .icon-box h4 {
   font-weight: 700;
-  margin-bottom: 15px;
   font-size: 24px;
 }
 
@@ -978,6 +979,20 @@ section {
   border-color: #115796;
 }
 
+@media (max-width: 400px) {
+  .services .icon-box {
+    width: 10rem;
+  }
+
+  .services .icon-box .icon i {
+    font-size: 1.8rem;
+  }
+
+  .services .icon-box h4 {
+    font-size: 1rem;
+  }
+}
+
 /*--------------------------------------------------------------
 # Team
 --------------------------------------------------------------*/
@@ -987,6 +1002,7 @@ section {
 
 .team .member {
   margin-bottom: 20px;
+  margin: 0 10%;
   overflow: hidden;
   border-radius: 4px;
   background: #fff;
@@ -1060,6 +1076,20 @@ section {
   bottom: 15px;
 }
 
+@media (max-width: 400px) {
+  .team .member .member-info h4 {
+    font-size: 13px;
+  }
+  
+  .team .member .member-info span {
+    font-size: 8px;
+  }
+  
+  .team .member .member-info p {
+    font-size: 8px;
+  }
+}
+
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
@@ -1090,6 +1120,7 @@ section {
   line-height: 24px;
   font-size: 14px;
   margin-bottom: 0;
+  margin: 0rem 2rem;
 }
 
 .contact .php-email-form {
