Ediciones de informacion final 4

--- a/public/assets/css/estilos.css
+++ b/public/assets/css/estilos.css
@@ -1410,3 +1410,13 @@ section {
     padding: 2px 0;
   }
 }
+
+.fb-page2{
+  background-color: #115796;
+  padding: 3rem;
+  width: 100%;
+}
+
+.fb-page2 ._2p3a{
+  width: 100%;
+}
